--- a/Lab02_EDII/Lab02_EDII.csproj
+++ b/Lab02_EDII/Lab02_EDII.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.0" />
+  </ItemGroup>
+
 
 </Project>
